<resources>
    <string name="app_name" translatable="false">BreNavigator</string>
    <string name="select_route">Historische Route</string>
    <string name="monuments">Monumenten</string>
    <string name="english">Engels</string>
    <string name="nederlands">Nederlands</string>
    <string name="welcome_title">Welkom in de BreNavigator App</string>
    <string name="welcome_text">Allereerst willen we graag weten welke taal je spreekt.</string>
    <string name="continue_button">Verder</string>
    <string name="no_gps_text">Geen GPS signaal</string>
    <string name="oke">Oké</string>
    <string name="close">Sluiten</string>
    <string name="information">Informatie</string>
    <string name="filter">Filter</string>
    <string name="historical_kilometer">Historische Kilometer</string>
    <string name="blind_walls" translatable="false">Blind Walls</string>
    <string name="title_activity_map">Kaart</string>
    <string name="looptijd">Geschatte looptijd: </string>
    <string name="afstand">Afstand (kilometers): </string>
    <string name="startroute">Start route</string>
    <string name="notification">Aangekomen bij POI.</string>
    <string name="yes">Ja</string>
    <string name="no">Nee</string>
    <string name="dialog_confirm_exit_main">Weet je zeker dat je de app wilt verlaten?</string>
    <string name="dialog_confirm_exit_route">Weet je zeker dat je de route wilt stoppen?</string>
</resources>
