<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.ags.projectseelion.MainActivity">

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/relativeLayout2">

        <RelativeLayout
            android:layout_width="342dp"
            android:layout_height="wrap_content"
            android:layout_alignEnd="@+id/relativeLayout"
            android:layout_alignRight="@+id/relativeLayout"
            android:layout_below="@+id/relativeLayout"
            tools:layout_editor_absoluteX="9dp"
            tools:layout_editor_absoluteY="124dp">

            <TextView
                android:id="@+id/activity_main_textView_dutch"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:text="@string/nederlands"
                android:textColor="@android:color/black"
                android:textSize="30sp"
                android:textStyle="bold"
                tools:layout_editor_absoluteX="48dp"
                tools:layout_editor_absoluteY="347dp" />

            <RadioButton
                android:id="@+id/activity_main_radioButton_dutch"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBottom="@+id/activity_main_textView_dutch"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                tools:layout_editor_absoluteX="195dp"
                tools:layout_editor_absoluteY="42dp"
                android:onClick="onRadioButtonClicked"/>

        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/relativeLayout"
            android:layout_width="344dp"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            tools:layout_editor_absoluteX="8dp"
            tools:layout_editor_absoluteY="418dp">

            <RadioButton
                android:id="@+id/activity_main_radioButton_english"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_above="@+id/activity_main_textView_dutch"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                tools:layout_editor_absoluteX="277dp"
                tools:layout_editor_absoluteY="347dp"
                android:onClick="onRadioButtonClicked"
                tools:ignore="NotSibling" />

            <TextView
                android:id="@+id/activity_main_textView_english"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:text="@string/english"
                android:textColor="@android:color/black"
                android:textSize="30sp"
                android:textStyle="bold"
                tools:layout_editor_absoluteX="16dp"
                tools:layout_editor_absoluteY="186dp" />
        </RelativeLayout>
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/relativeLayout2"
        android:layout_width="344dp"
        android:layout_height="151dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/activity_main_textView_welcome_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:gravity="center"
            android:text="@string/welcome_title"
            android:textColor="@android:color/black"
            android:textSize="30sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/activity_main_textView_welcome_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/activity_main_textView_welcome_title"
            android:text="@string/welcome_text"
            android:textSize="14sp" />
    </RelativeLayout>

    <Button
        android:id="@+id/activity_main_button_continue"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:text="@string/continue_button"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</android.support.constraint.ConstraintLayout>
